--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <main>
          <div class="left">
             <h3>Fale o nome da cor em inglês</h3>
-            <span>Yellow</span>
+            <span id="color-in-the-box">Color</span>
 
             <div id="current-color">
 
@@ -39,5 +39,7 @@
          <img src="assets/imgs/logo-dio.png" alt="DIO">
       </footer>
    </div>
+
+   <script src="assets/js/script.js"></script>
 </body>
 </html>
